RESOLVED FIXED33936
[GTK] Fails /LayoutTests/fast/css/button-height.html
https://bugs.webkit.org/show_bug.cgi?id=33936
Summary [GTK] Fails /LayoutTests/fast/css/button-height.html
Daniel Bates
Reported 2010-01-20 19:09:31 PST
The GTK port fails test /LayoutTests/fast/css/button-height.html, which was included in the patch for bug #29564. The GTK bot results are at <http://build.webkit.org/results/GTK%20Linux%20Release/r53591%20%287900%29/fast/css/>. From the results: FAIL document.getElementById('button1').offsetHeight should be 25. Was 28. The GTK port renders <input type="button"> and <button> elements (without any user-specified style) with different heights. The former is 25 pixels tall. The latter is 28 pixels tall. Moreover, the GTK port does not honor the user-specified height for <input type="button" style="height: 40px" .../> for the fifth button in the test. Hence, the failure message: FAIL document.getElementById('button5').offsetHeight is incorrect for this platform. Should be the same height as button 1 for the Mac ports and 40 otherwise.
Attachments
Patch for this issue (18.66 KB, patch)
2010-10-08 14:44 PDT, Martin Robinson
dbates: review+
Daniel Bates
Comment 1 2010-01-20 20:55:10 PST
Rolling out change set 53591 <http://trac.webkit.org/changeset/53591> since it caused a regression of the test /fast/replaced/table-percent-height.html on the Qt bot. There appears to be an issue on GTK with regards to the rendering of button heights, but since I am rolling out r53591 (which includes the test button-height.html) it invalidates the reason this bug was filed. We should probably look into the GTK button rendering code/file a separate bug.
Daniel Bates
Comment 2 2010-01-26 22:05:58 PST
Re-committed patch that includes test button-height.html in change set 53897 <http://trac.webkit.org/changeset/53897>.
Martin Robinson
Comment 3 2010-10-08 14:44:12 PDT
Created attachment 70292 [details] Patch for this issue
Daniel Bates
Comment 4 2010-10-08 18:52:41 PDT
Comment on attachment 70292 [details] Patch for this issue This looks sane to me. I assume at some place the height of the button is computed based on the height of the button text.
Martin Robinson
Comment 5 2010-10-08 18:58:24 PDT
Note You need to log in before you can comment on or make changes to this bug.