2010-10-08  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Daniel Bates.

        [GTK] Fails /LayoutTests/fast/css/button-height.html
        https://bugs.webkit.org/show_bug.cgi?id=33936

        Unskip a test that is now passing and update baselines for
        other tests.

        * platform/gtk/Skipped: Update skipped list.
        * platform/gtk/fast/forms/box-shadow-override-expected.txt:
        * platform/gtk/fast/forms/button-style-color-expected.txt:
        * platform/gtk/fast/forms/input-button-sizes-expected.txt:
2010-10-08  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Daniel Bates.

        [GTK] Fails /LayoutTests/fast/css/button-height.html
        https://bugs.webkit.org/show_bug.cgi?id=33936

        GTK buttons honor height property set via CSS. The code for the method
        adjustButtonStyle originates from the original GTK+ theme drawing code
        and is clearly just a copy-paste from the Safari theme drawing code. The
        Safari theme drawing code does quite a bit of work to ensure that button
        fonts are consistent with the system theme, which is not something the GTK+
        port does.

        This change brings the method more in line with the Chromium port, which
        allows CSS to style buttons, only overriding the line-height property,
        which is required for layout tests to pass.

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::RenderThemeGtk::adjustButtonStyle): No longer override most CSS
        properties for button styling.

Canonical link: https://commits.webkit.org/60036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69436 268f45cc-cd09-0410-ab3c-d52691b4dbfc